cell wrap text fixed

--- a/src/components/semantic-ui-table/style.module.css
+++ b/src/components/semantic-ui-table/style.module.css
@@ -1,7 +1,14 @@
-.header{
-  display: flex;
+.header {
+	display: flex;
+	text-overflow: ellipsis !important;
+	white-space: nowrap !important;
 }
 
-.icon{
-  margin-left: 10px
+.icon {
+	margin-left: 10px;
+}
+
+.cell {
+	text-overflow: ellipsis !important;
+	white-space: nowrap !important;
 }
